${MIRROR_WGET}
download_package geisha.arizona.edu.geisha
download_package www.genenames.org.hgnc
download_package ftp.xenbase.org.downloads
download_package zfin.org.downloads
download_package alliancegenome.org.orthology

TAG: homologyload-6-0-17-1
DATE: 05/11/2021
STAFF: sc
CHANGES: TR13349 Build39

TAG: homologyload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: homologyload-6-0-12-2
TAG: homologyload-6-0-12-1
DATE: 08/29/2018
STAFF: sc
CHANGES: TR12044 Homology load HGNC biomart changes

TAG: homologyload-6-0-11-1
DATE: 02/14/2018
STAFF: dbm 
CHANGES:
1) bin/preprocessXenbase.py: fixed parsing of translation file because the
                             format changed

TAG: homologyload-6-0-8-1
DATE: 03/27/2017
STAFF: dbm 
CHANGES:
1) bin/clusterize.py: disable debug statements

TAG: homologyload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: homologyload-6-0-6-2
TAG: homologyload-6-0-6-1
DATE: 11/10/2016
STAFF: lec
CHANGES: 
1) remove 'scrum-bob' from index.html

TAG: homologyload-6-0-5-4
DATE: 09/26/2016
STAFF: sc
CHANGES: TR12421
1)Replaced clustering algorithm

TAG: homologyload-6-0-5-3
DATE: 09/15/2016
STAFF: sc
CHANGES: TR12421
1) clusterize.py - fixed clustering bug

TAG: homologyload-6-0-5-2
DATE: 09/01/2016
STAFF: sc
1) Merge TR12044 branch to trunk

TAG: homology-no tag
DATE: 09/01/2016
STAFF: lec
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key in (1,3) changed to = 1

TAG: homologyload-TR12044-2
DATE: 07/06/2016
STAFF: sc
preprocessHGNC.py -  fixed bug where no singletons were being loaded

TAG: homologyload-TR12044-1
DATE: 07/01/2016
STAFF: sc
1) preprocessHGNC.py - 
* added parseFile method - create data structure because now one line per MGI ID 
* updated process method to iterate thru data structure rather than file
* added temp debug to qc report

TAG: homologyload-tr12044-BP
DATE: 07/01/2016
STAFF: sc